# rougeprobe

./: LICENSE  README.md  pyproject.toml
rogueprobe/: interactive_agent.py
rogueprobe/inputs/: dark_actor.py
rogueprobe/prompts/: community_focused.j2  police_state.j2
rogueprobe/tools/: help_tools.py
test/: run_test.py
