[project]
name = "rogueprobe"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.72.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.0.1"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.72.1"
jinja2 = "^3.1.6"
python-dotenv = "^1.0.1"
